--- a/IdeaProjects/webserver/src/main/resources/webapp/index.html
+++ b/IdeaProjects/webserver/src/main/resources/webapp/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-<h1>Hello web server</h1>
+<h1>Hello world!</h1>
 </body>
 </html>
