--- a/IdeaProjects/webserver/src/main/resources/webapp/index.html
+++ b/IdeaProjects/webserver/src/main/resources/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Webapp</title>
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
